--- a/custom-alert/src/main/res/layout/custom_alert.xml
+++ b/custom-alert/src/main/res/layout/custom_alert.xml
@@ -151,7 +151,7 @@
         android:layout_below="@+id/relAlert"
         android:background="@drawable/corner_back_bottom"
         android:orientation="vertical"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <ImageView
         android:id="@+id/circleView"
@@ -164,32 +164,14 @@
         android:padding="@dimen/_10dp"
         android:visibility="visible" />
 
-    <RelativeLayout
-        android:id="@+id/relPrg"
+    <ProgressBar
+        android:id="@+id/prgCircle"
+        style="@style/Widget.AppCompat.ProgressBar"
         android:layout_width="@dimen/_64dp"
         android:layout_height="@dimen/_64dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/_12dp"
-        android:visibility="gone">
-
-        <ImageView
-            android:id="@+id/ivProgress"
-            android:layout_width="@dimen/_64dp"
-            android:layout_height="@dimen/_64dp"
-            android:background="@drawable/circle_alert"
-            android:contentDescription="@string/contentDescription"
-            android:padding="@dimen/_10dp"
-            android:visibility="visible" />
-
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="@style/Widget.AppCompat.ProgressBar"
-            android:layout_width="@dimen/_64dp"
-            android:layout_height="@dimen/_64dp"
-            android:padding="@dimen/_10dp"
-            android:theme="@style/CircularProgress"
-            android:visibility="visible" />
-
-    </RelativeLayout>
-
+        android:indeterminateTint="@android:color/white"
+        android:padding="@dimen/_10dp"
+        android:visibility="gone" />
 </RelativeLayout>
