--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#009688</color>
     <color name="colorPrimaryDark">#2196F3</color>
     <color name="colorAccent">#FF5722</color>
+    <color name="colorBack">#8A8A8A</color>
 
     <color name="color_neutral">#0027FF</color>
     <color name="color_negative">#FF0000</color>
