--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimaryDark">@color/colorBack</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
@@ -27,6 +27,9 @@
 
     <style name="Button" parent="LinearLayout">
         <item name="android:textAllCaps">false</item>
+        <item name="android:background">@drawable/corner_btn</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:textColor">@android:color/white</item>
     </style>
 
 </resources>
