--- a/custom-alert/src/main/res/values/styles.xml
+++ b/custom-alert/src/main/res/values/styles.xml
@@ -1,20 +1,16 @@
 <resources>
 
-    <style name="DialogTheme">
+    <style name="CustomAlertDialogTheme">
         <item name="android:windowEnterAnimation">@anim/modal_in</item>
         <item name="android:windowExitAnimation">@anim/modal_out</item>
     </style>
 
-    <style name="Button">
+    <style name="CustomAlertButton">
         <item name="android:layout_width">@dimen/_0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
         <item name="android:gravity">center</item>
         <item name="android:textAllCaps">false</item>
-    </style>
-
-    <style name="CircularProgress" parent="Theme.AppCompat.Light">
-        <item name="colorAccent">@android:color/white</item>
     </style>
 
 </resources>
