--- a/custom-alert/src/main/res/values/colors.xml
+++ b/custom-alert/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="colorTitleCustomAlert">#292929</color>
     <color name="colorMessageCustomAlert">#615e5e</color>
 
-    <color name="colorClickButton">#B2DDFF</color>
+    <color name="colorClickButton">#084575</color>
 
     <color name="colorSuccessCustomAlert">#8BC34A</color>
     <color name="colorFailCustomAlert">#F44336</color>
