--- a/custom-alert/src/main/res/drawable/corner_left.xml
+++ b/custom-alert/src/main/res/drawable/corner_left.xml
@@ -2,4 +2,7 @@
     android:shape="rectangle">
     <solid android:color="@color/colorClickButton" />
     <corners android:bottomLeftRadius="@dimen/_10dp" />
+    <stroke
+        android:width="6px"
+        android:color="@android:color/white" />
 </shape>
