--- a/app/src/main/res/layout/custom_view_identity.xml
+++ b/app/src/main/res/layout/custom_view_identity.xml
@@ -21,42 +21,48 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="14dp"
         android:layout_marginTop="4dp"
-        android:text="@string/view_name" />
+        android:text="@string/view_name"
+        android:textColor="@color/color_text_view" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="14dp"
         android:layout_marginTop="4dp"
-        android:text="@string/view_last_name" />
+        android:text="@string/view_last_name"
+        android:textColor="@color/color_text_view" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="14dp"
         android:layout_marginTop="4dp"
-        android:text="@string/view_birthday" />
+        android:text="@string/view_birthday"
+        android:textColor="@color/color_text_view" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="14dp"
         android:layout_marginTop="4dp"
-        android:text="@string/view_country" />
+        android:text="@string/view_country"
+        android:textColor="@color/color_text_view" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="14dp"
         android:layout_marginTop="4dp"
-        android:text="@string/view_city" />
+        android:text="@string/view_city"
+        android:textColor="@color/color_text_view" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="14dp"
         android:layout_marginTop="4dp"
-        android:text="@string/view_girlfriend" />
+        android:text="@string/view_girlfriend"
+        android:textColor="@color/color_text_view" />
 
     <TextView
         style="@style/TextView"
@@ -72,13 +78,15 @@
         android:layout_height="230dp"
         android:layout_gravity="center"
         android:layout_marginTop="8dp"
-        android:background="@drawable/img_jim" />
+        android:background="@drawable/img_jim"
+        android:contentDescription="@android:string/unknownName" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="14dp"
         android:layout_marginTop="4dp"
-        android:text="@string/view_autobiography" />
+        android:text="@string/view_autobiography"
+        android:textColor="@color/color_text_view" />
 
 </LinearLayout>
