--- a/custom-alert/src/main/res/drawable/circle_alert.xml
+++ b/custom-alert/src/main/res/drawable/circle_alert.xml
@@ -8,5 +8,5 @@
 
     <stroke
         android:width="@dimen/_3dp"
-        android:color="@android:color/white" />
+        android:color="?colorCustomAlert" />
 </shape>
