--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackGround"
     tools:context=".MainActivity">
 
     <TextView
@@ -28,8 +29,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
+            android:buttonTint="@color/colorAccent"
             android:layoutDirection="rtl"
-            android:text="@string/enable_custom_alert_full" />
+            android:text="@string/enable_custom_alert_full"
+            android:textColor="@color/color_text" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/button"
+            android:textColor="@color/color_text" />
 
         <RadioGroup
             android:layout_width="match_parent"
@@ -39,23 +48,67 @@
             <RadioButton
                 android:id="@+id/rbSimple"
                 style="@style/LinearLayout"
-                android:text="@string/alert_simple" />
+                android:buttonTint="@color/colorAccent"
+                android:text="@string/alert_simple"
+                android:textColor="@color/color_text" />
 
             <RadioButton
                 android:id="@+id/rbOneButton"
                 style="@style/LinearLayout"
-                android:text="@string/alert_one_button" />
+                android:buttonTint="@color/colorAccent"
+                android:text="@string/alert_one_button"
+                android:textColor="@color/color_text" />
 
             <RadioButton
                 android:id="@+id/rbTwoButtons"
                 style="@style/LinearLayout"
+                android:buttonTint="@color/colorAccent"
                 android:checked="true"
-                android:text="@string/alert_two_buttons" />
+                android:text="@string/alert_two_buttons"
+                android:textColor="@color/color_text" />
 
             <RadioButton
                 android:id="@+id/rbThreeButtons"
                 style="@style/LinearLayout"
-                android:text="@string/alert_three_buttons" />
+                android:buttonTint="@color/colorAccent"
+                android:text="@string/alert_three_buttons"
+                android:textColor="@color/color_text" />
+
+        </RadioGroup>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="14dp"
+            android:text="@string/theme"
+            android:textColor="@color/color_text" />
+
+        <RadioGroup
+            android:id="@+id/rgTheme"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/rbSystem"
+                style="@style/LinearLayout"
+                android:buttonTint="@color/colorAccent"
+                android:text="@string/theme_system"
+                android:textColor="@color/color_text" />
+
+            <RadioButton
+                android:id="@+id/rbLight"
+                style="@style/LinearLayout"
+                android:buttonTint="@color/colorAccent"
+                android:text="@string/theme_light"
+                android:textColor="@color/color_text" />
+
+            <RadioButton
+                android:id="@+id/rbDark"
+                style="@style/LinearLayout"
+                android:buttonTint="@color/colorAccent"
+                android:text="@string/theme_dark"
+                android:textColor="@color/color_text" />
 
         </RadioGroup>
 
@@ -133,7 +186,8 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="14dp">
 
             <TextView
                 style="@style/TextView"
@@ -145,9 +199,12 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_margin="8dp"
+                android:buttonTint="@color/colorAccent"
                 android:checked="true"
                 android:layoutDirection="rtl"
-                android:text="@string/enable_icon" />
+                android:text="@string/enable_icon"
+                android:textColor="@color/color_text"
+                tools:ignore="RelativeOverlap" />
         </RelativeLayout>
 
         <LinearLayout
@@ -182,7 +239,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:onClick="click_happy"
-            android:text="HappyPath"
             android:visibility="invisible" />
     </LinearLayout>
 
@@ -191,6 +247,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:text="@string/by_mh"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textColor="@color/color_text" />
 
 </RelativeLayout>
